[project]
name = "gym-log"
version = "0.1.0"
description = ""
authors = [
    {name = "Harikrishnan",email = "meethkr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "gym_log", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
